eks_wepapp/k8s_configs/cam-ingress2.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress 
metadata:
  name: cam-ingress
  namespace: cam
  annotations: 
    kubernetes.io/ingress.class: nginx 
    nginx.ingress.kubernetes.io/whitelist-source-range: "131.226.33.86/32,173.38.117.87/32,34.205.208.125/32,34.192.183.106/32,34.224.19.93/32,34.227.121.223/32"
spec:
  rules:
#    - host: cam.mydomain.com
  - http:
      paths:
      - backend:
          service:
            name: cam-app
            port:
              number: 3000
        path: /
        pathType: Prefix
